include/zynum/blas/blas.h

typedef int32_t zynum_blas_int;
typedef struct {
    float real;
    float imag;
} zynum_blas_complex_float;
typedef struct {
    double real;
    double imag;
} zynum_blas_complex_double;
void dtbmv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const zynum_blas_int *k, const double *a, const zynum_blas_int *lda, double *x, const zynum_blas_int *incx);
void ctbmv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const zynum_blas_int *k, const zynum_blas_complex_float *a, const zynum_blas_int *lda, zynum_blas_complex_float *x, const zynum_blas_int *incx);
void ztbmv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const zynum_blas_int *k, const zynum_blas_complex_double *a, const zynum_blas_int *lda, zynum_blas_complex_double *x, const zynum_blas_int *incx);
void stpmv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const float *ap, float *x, const zynum_blas_int *incx);
void dtpmv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const double *ap, double *x, const zynum_blas_int *incx);
void ctpmv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const zynum_blas_complex_float *ap, zynum_blas_complex_float *x, const zynum_blas_int *incx);
void ztpmv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const zynum_blas_complex_double *ap, zynum_blas_complex_double *x, const zynum_blas_int *incx);
void strsv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const float *a, const zynum_blas_int *lda, float *x, const zynum_blas_int *incx);
void dtrsv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const double *a, const zynum_blas_int *lda, double *x, const zynum_blas_int *incx);
void ctrsv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const zynum_blas_complex_float *a, const zynum_blas_int *lda, zynum_blas_complex_float *x, const zynum_blas_int *incx);
void ztrsv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const zynum_blas_complex_double *a, const zynum_blas_int *lda, zynum_blas_complex_double *x, const zynum_blas_int *incx);
void stbsv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const zynum_blas_int *k, const float *a, const zynum_blas_int *lda, float *x, const zynum_blas_int *incx);
void dtbsv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const zynum_blas_int *k, const double *a, const zynum_blas_int *lda, double *x, const zynum_blas_int *incx);
void ctbsv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const zynum_blas_int *k, const zynum_blas_complex_float *a, const zynum_blas_int *lda, zynum_blas_complex_float *x, const zynum_blas_int *incx);
void ztbsv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const zynum_blas_int *k, const zynum_blas_complex_double *a, const zynum_blas_int *lda, zynum_blas_complex_double *x, const zynum_blas_int *incx);
void stpsv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const float *ap, float *x, const zynum_blas_int *incx);
void dtpsv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const double *ap, double *x, const zynum_blas_int *incx);
void ctpsv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const zynum_blas_complex_float *ap, zynum_blas_complex_float *x, const zynum_blas_int *incx);
void ztpsv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const zynum_blas_complex_double *ap, zynum_blas_complex_double *x, const zynum_blas_int *incx);