include/zynum/blas/blas.f90


    subroutine dtbmv( &
        u, t, d, n, k, a, &
        lda, x, incx &
    ) bind(C, name="dtbmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      real(c_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine dtbmv

    subroutine ctbmv( &
        u, t, d, n, k, a, &
        lda, x, incx &
    ) bind(C, name="ctbmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      complex(blas_complex_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine ctbmv

    subroutine ztbmv( &
        u, t, d, n, k, a, &
        lda, x, incx &
    ) bind(C, name="ztbmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      complex(blas_complex_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine ztbmv

    subroutine stpmv( &
        u, t, d, n, ap, x, &
        incx &
    ) bind(C, name="stpmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: ap(*)
      real(c_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine stpmv

    subroutine dtpmv( &
        u, t, d, n, ap, x, &
        incx &
    ) bind(C, name="dtpmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: ap(*)
      real(c_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine dtpmv

    subroutine ctpmv( &
        u, t, d, n, ap, x, &
        incx &
    ) bind(C, name="ctpmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: ap(*)
      complex(blas_complex_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine ctpmv

    subroutine ztpmv( &
        u, t, d, n, ap, x, &
        incx &
    ) bind(C, name="ztpmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: ap(*)
      complex(blas_complex_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine ztpmv

    subroutine strsv( &
        u, t, d, n, a, lda, &
        x, incx &
    ) bind(C, name="strsv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine strsv

    subroutine dtrsv( &
        u, t, d, n, a, lda, &
        x, incx &
    ) bind(C, name="dtrsv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine dtrsv

    subroutine ctrsv( &
        u, t, d, n, a, lda, &
        x, incx &
    ) bind(C, name="ctrsv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine ctrsv

    subroutine ztrsv( &
        u, t, d, n, a, lda, &
        x, incx &
    ) bind(C, name="ztrsv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine ztrsv

    subroutine stbsv( &
        u, t, d, n, k, a, &
        lda, x, incx &
    ) bind(C, name="stbsv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      real(c_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine stbsv

    subroutine dtbsv( &
        u, t, d, n, k, a, &
        lda, x, incx &
    ) bind(C, name="dtbsv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      real(c_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine dtbsv

    subroutine ctbsv( &
        u, t, d, n, k, a, &
        lda, x, incx &
    ) bind(C, name="ctbsv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      complex(blas_complex_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine ctbsv

    subroutine ztbsv( &
        u, t, d, n, k, a, &
        lda, x, incx &
    ) bind(C, name="ztbsv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      complex(blas_complex_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine ztbsv

    subroutine stpsv( &
        u, t, d, n, ap, x, &
        incx &
    ) bind(C, name="stpsv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: ap(*)
      real(c_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine stpsv

    subroutine dtpsv( &
        u, t, d, n, ap, x, &
        incx &
    ) bind(C, name="dtpsv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: ap(*)
      real(c_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine dtpsv

    subroutine ctpsv( &
        u, t, d, n, ap, x, &
        incx &
    ) bind(C, name="ctpsv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: ap(*)
      complex(blas_complex_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine ctpsv

    subroutine ztpsv( &
        u, t, d, n, ap, x, &
        incx &
    ) bind(C, name="ztpsv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: ap(*)
      complex(blas_complex_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine ztpsv
